--- a/css/styles.css
+++ b/css/styles.css
@@ -136,3 +136,18 @@ h3{
   word-spacing:10px;
   color: black;
 }
+
+@media (max-width:1028px) {
+  #title{
+    text-align: center;
+  }
+  .tittle-img{
+    position: static;
+    transform:rotate(0);
+  }
+  h1{
+    font-size: 2.5rem;
+  }
+  h2{
+    font-size: 2rem;
+  }
